製作後台預告片海報管理版面設定

--- a/web03/css/css.css
+++ b/web03/css/css.css
@@ -20,16 +20,20 @@ input[type='text'],input[type='file'],input[type='password'],textarea,.button
 	font:Open Sans,'微軟正黑體';
 	font-weight:600;
 }
+
+/* 修改大小 */
 input[type='button'],input[type='submit'],input[type='reset'],button,.button
 {
-	min-width:70px;
-	min-height:40px;
+	min-width:40px;
+	min-height:30px;
 	background:#000;
 	color:#fff;
 	border:none;
 	cursor:pointer;
-	font-size:18px;
+	font-size:14px;
 	text-decoration:none;
+	border-radius: 5px;
+	padding: 3px 6px;
 }
 input[type='button']:hover,input[type='submit']:hover,input[type='reset']:hover,button:hover,.button:hover
 {
